cmake_minimum_required(VERSION 3.28)
project(module10)

set(CMAKE_CXX_STANDARD 23)

add_executable(exercise01 exercise01.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
add_executable(exercise02 exercise02.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
