cmake_minimum_required(VERSION 3.28)
project(module10)

set(CMAKE_CXX_STANDARD 23)

add_executable(exercise01 exercise01.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
add_executable(exercise02 exercise02.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
add_executable(exercise03 exercise03.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
add_executable(exercise04 exercise04.cpp city.h city.cpp country.h country.cpp world-util.cpp world-util.h)
add_executable(exercise05 exercise05.cpp)
add_executable(exercise06 exercise06.cpp)
add_executable(exercise07 exercise07.cpp)
add_executable(exercise08 exercise08.cpp)
